[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://mat/ChunkShader.tres" type="Shader" id=3]
[ext_resource path="res://mat/WaterShader.tres" type="Shader" id=4]
[ext_resource path="res://mat/SimpleNoise.png" type="Texture" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )
chunk_size = 100000
chunk_density = 4
render_distance = 64
chunk_shader = ExtResource( 3 )
water_shader = ExtResource( 4 )
simple_noise = ExtResource( 5 )

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="CamOffset" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="Player/CamOffset"]
near = 1.0
far = 8192.0

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.819152, 0.573576, 0, -0.573576, -0.819152, 0, 2, 0 )

[node name="InfoMenu" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -158.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InfoMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 179.0
margin_bottom = 151.0

[node name="Title" type="Label" parent="InfoMenu/VBoxContainer"]
margin_right = 172.0
margin_bottom = 14.0
text = "SIMPLE INFINITE TERRAIN"

[node name="HSeparator1" type="HSeparator" parent="InfoMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 172.0
margin_bottom = 22.0

[node name="HSplitContainer" type="HSplitContainer" parent="InfoMenu/VBoxContainer"]
margin_top = 26.0
margin_right = 172.0
margin_bottom = 142.0

[node name="Key" type="Label" parent="InfoMenu/VBoxContainer/HSplitContainer"]
margin_right = 44.0
margin_bottom = 116.0
text = "Escape
F

WASD
Space
Shift
V"
align = 1

[node name="Name" type="Label" parent="InfoMenu/VBoxContainer/HSplitContainer"]
margin_left = 56.0
margin_right = 172.0
margin_bottom = 116.0
text = "Toggle Main Menu
Toggle Fullscreen

Move
Jump or Fly Up
Sprint or Fly Down
Toggle Flying"

[node name="MainMenu" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -327.888
margin_top = -155.8
margin_right = -195.888
margin_bottom = 0.199951
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 148.0
margin_bottom = 319.0
grow_vertical = 0

[node name="WorldPresetsTitle" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 141.0
margin_bottom = 14.0
text = "Select a World Preset:"
align = 1

[node name="HSeparator" type="HSeparator" parent="MainMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 141.0
margin_bottom = 22.0

[node name="HSeparatorEnd" type="HSeparator" parent="MainMenu/VBoxContainer"]
margin_top = 26.0
margin_right = 141.0
margin_bottom = 30.0

[node name="RDLabel" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 34.0
margin_right = 141.0
margin_bottom = 48.0
text = "Render Distance:"

[node name="RDSlider" type="HSlider" parent="MainMenu/VBoxContainer"]
margin_top = 52.0
margin_right = 141.0
margin_bottom = 68.0
max_value = 48.0
value = 2.0

[node name="CSLabel" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 72.0
margin_right = 141.0
margin_bottom = 86.0
text = "Chunk Size:"

[node name="CSSlider" type="HSlider" parent="MainMenu/VBoxContainer"]
margin_top = 90.0
margin_right = 141.0
margin_bottom = 106.0
min_value = 1.0
max_value = 256.0
value = 2.0

[node name="CDLabel" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 110.0
margin_right = 141.0
margin_bottom = 124.0
text = "Chunk Density:"

[node name="CDSlider" type="HSlider" parent="MainMenu/VBoxContainer"]
margin_top = 128.0
margin_right = 141.0
margin_bottom = 144.0
min_value = 1.0
max_value = 32.0
value = 2.0

[node name="ChunkCaching" type="CheckBox" parent="MainMenu/VBoxContainer"]
margin_top = 148.0
margin_right = 141.0
margin_bottom = 172.0
hint_tooltip = "Enable this to cache nearby chunks that aren't viewable yet. Increases performance in local area, but also increases load times."
text = "Chunk Caching"

[node name="Reload" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 176.0
margin_right = 141.0
margin_bottom = 196.0
hint_tooltip = "Changing these render settings can cause the world to turn into mush. Use this button to reload from scratch."
text = "Reload"

[node name="HSeparatorPlayer" type="HSeparator" parent="MainMenu/VBoxContainer"]
margin_top = 200.0
margin_right = 141.0
margin_bottom = 204.0

[node name="SensLabel" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 208.0
margin_right = 141.0
margin_bottom = 222.0
text = "Look Sensitivity:"

[node name="SensSlider" type="HSlider" parent="MainMenu/VBoxContainer"]
margin_top = 226.0
margin_right = 141.0
margin_bottom = 242.0
min_value = 0.001
max_value = 0.5
step = 0.001
value = 0.5

[node name="SpeedLabel" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 246.0
margin_right = 141.0
margin_bottom = 260.0
text = "Player Speed:"

[node name="SpeedSlider" type="HSlider" parent="MainMenu/VBoxContainer"]
margin_top = 264.0
margin_right = 141.0
margin_bottom = 280.0
min_value = 0.5
max_value = 50.0
step = 0.1
value = 0.5

[node name="HSeparatorLeave" type="HSeparator" parent="MainMenu/VBoxContainer"]
margin_top = 284.0
margin_right = 141.0
margin_bottom = 288.0

[node name="Leave" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 292.0
margin_right = 141.0
margin_bottom = 312.0
text = "Quit"

[connection signal="value_changed" from="MainMenu/VBoxContainer/RDSlider" to="." method="_on_RDSlider_value_changed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/CSSlider" to="." method="_on_CSSlider_value_changed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/CDSlider" to="." method="_on_CDSlider_value_changed"]
[connection signal="toggled" from="MainMenu/VBoxContainer/ChunkCaching" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Reload" to="." method="_on_Reload_pressed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/SensSlider" to="Player" method="_on_SensSlider_value_changed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/SpeedSlider" to="Player" method="_on_SpeedSlider_value_changed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
